cabal-version:   3.4
name:            static-site-generator
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Felix Leitz
maintainer:      felix.leitz92@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Web

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , blaze-html
    , containers
    , directory
    , filepath

  hs-source-dirs:   src-lib
  default-language: GHC2024

executable static-site-generator
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , static-site-generator

  hs-source-dirs:   app
  default-language: GHC2024

test-suite static-site-generator-test
  import:           warnings
  default-language: GHC2024

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , static-site-generator
